<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, OpenXCTestActivity!</string>
    <string name="app_name">MPG Viewer</string>
    <string name="lSpeed">Speed (km/h): </string>
    <string name="tSpeed">undefined</string>
    <string name="lMPG">Usage (L):</string>
    <string name="tMPG">undefined</string>
    <string name="lScroll">Scrolling:</string>
    <string name="tButton">On</string>
    <string name="settingsTitle">Settings</string>
    <string name="exitTitle">Close</string>
    <string name="saveTitle">Stop Recording</string>
    <string name="mileTitle">View Overview</string>
    <string name="labelTime">Date of Trip: </string>
    <string name="labelDistance">Distance Traveled: </string>
    <string name="labelGasMileage">Gas Mileage: </string>
    <string name="labelGas">Gas Used: </string>    
    <string name="labelLength">Length of trip: </string>
    <string name="createDataTitle">Create Data</string>
    <string name="viewGraphs">View Graphs</string>
    <string name="currentUsage">00</string>
    <string name="lastUsage">00</string>
    <string name="lYesterday">Yesterday\'s Usage: </string>
    <string name="lUnits">L</string>
    <string name="lTitle">Daily Gas Usage</string>
    <string name="lastTrip">00</string>
    <string name="previousTrip">00</string>
    <string name="lPreviousTrip">Previous Trip: </string>
    <string name="lUnitsTrip">km/l</string>
    <string name="lTitle2">Last Trip Gas Mileage</string>
    <string name="pauseTitle">Pause Recording</string>

</resources>