<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/settings"
    	  android:title="@string/settingsTitle"
    />
    
    <item android:id="@+id/viewOverview"
    	  android:title="@string/mileTitle"
    	  android:showAsAction="ifRoom" 
    />
        
    <item android:id="@+id/stopRecording"
    	  android:title="@string/saveTitle"
    	  android:icon="@android:drawable/ic_menu_save"
    	  android:showAsAction="ifRoom"
    />
    
    <item android:id="@+id/pauseRecording"
          android:title="@string/pauseTitle"
          android:icon="@android:drawable/ic_media_pause"
          android:showAsAction="ifRoom"
    />
    
    <item android:id="@+id/createData"
    	  android:title="@string/createDataTitle"
    />
    
    <item android:id="@+id/close"
    	  android:title="@string/exitTitle"
    	  android:icon="@android:drawable/ic_menu_close_clear_cancel"
    	  android:showAsAction="ifRoom"
    />
    
    <item android:id="@+id/viewGraphs"
          android:title="@string/viewGraphs"
          android:showAsAction="ifRoom"
    />

</menu>